// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fragment/AppWrapper/subscribeFormAction will display a success alert when the request is successful 1`] = `
<body>
  
  
  <div
    id="app"
  >
    
  
    <div
      <=""
      div=""
      id="plugin__12e5"
    >
      

    </div>
  </div>
  <div
    class="ss-notification-root"
    data-v-app=""
    role="alert"
  >
    
    <div
      class="ss-notification ss-notification--success slide-top-enter-from slide-top-enter-active"
    >
      <div
        class="ss-notification--icon"
      >
        <svg
          class=""
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="ss-notification--wrapper"
      >
        <!--v-if-->
        <!--v-if-->
        <div
          class="ss-notification--content"
        >
          <label />
        </div>
      </div>
    </div>
    
  </div>
</body>
`;

exports[`fragment/AppWrapper/subscribeFormAction will not display a success alert when the request body has not action properties 1`] = `
<body>
  
  
  <div
    id="app"
  >
    
  
    <div
      <=""
      div=""
      id="plugin__12e5"
    >
      

    </div>
  </div>
  <div
    class="ss-notification-root"
    data-v-app=""
    role="alert"
  >
    
    
  </div>
</body>
`;

exports[`fragment/AppWrapper/subscribeFormAction will render children and match snapshot 1`] = `
<div class="ss-badge ss-badge--success ss-badge--xs text-bold">
  <div class="ss-badge--wrapper">
    <!--v-if-->
    <div class="ss-badge--label">its_ferdi</div>
  </div>
</div>
`;
